# TEST

./: .gitignore  README.md
ANDROID/: README.md
ANDROID/ANDRO_TEST_01/: Testt01.cxx
CPP/TEST1/: Make.cmd  T01.cpp  Test.ps1
CS_MONO/TestApp01/: Compile.cmd  Main.cs
CS_Windows/: README.md
CS_Windows/CSC_APP_PSC/: Make.cmd  README.md
CS_Windows/CSC_CHK/: Make_CHKEdit.cmd
CS_Windows/CSC_IP_CHK/: C_PCS_IP_CHK.cs  Make.cmd
CS_Windows/SBS/: C_Log.cs  SBS.csproj
CS_Windows/TEST_Data/: Make.cmd
CS_Windows/TEST_GUI/: README.md
DotNet_CS/CSC/: WinCredCmd.cmd
DotNet_CS/CSC_OperatorCond/: Make.cmd  OPR_CND.cs
DotNet_CS/SBS/: C_PsLib.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  SBS.sln
DotNet_CS/SCCM_TS_Quit/: StartExe.cs
DotNet_CS/TEST_Data/: XmlDbUI.cs
DotNet_CS/TEST_WMI/: TEST_WMI.cs
DotNet_CS/WCT_TEST_01/: WCT_TEST_01.sln
GCODE/Samples/: 好人平安.nc  字母.nc  海鸥世书情1.nc  轮ADVANCED.nc  雕.nc  鹏程万里.nc
GCODE/TEST01/: Test.xlsx  test01.nc
GCODE/TEST_Decoupe01/: GLRB.nc  Test.xlsx
GCODE/TestPCB_01/: DrillIdent.did  Test02 (Plot Report).txt  Test02 - Bottom Copper (Resist).gbr  Test02 - Bottom Copper.gbr  Test02 - Bottom Copper.ngc  Test02 - Drill Data - [Through Hole] (Unplated).drl  Test02 - Drill Data - [Through Hole].drl  Test02 - Drill Ident Drawing - [Through Hole].gbr  Test02.mop  Test02.pcb  Test02.prj  Test03 (Plot Report).txt  (+9 more)
JAVA/: README.md
JS_Node/: README.md
PS1_Windows/: README.md  dfasfd
PY_BeeWare/: README.md
PY_BeeWare/ENVBW01/appbw01/: LICENSE  README.rst  pyproject.toml
PY_BeeWare/ENVBW01/appbw01/src/appbw01/: __main__.py  app.py
PY_BeeWare/ENVBW01/appbw01/src/appbw01.dist-info/: METADATA
PY_BeeWare/TEST_01/: LICENSE  README.rst  TEST_01.cmd  Test_01.py  pyproject.toml
PY_BeeWare/TEST_01/src/limynt01/: __main__.py  app.py
PY_BeeWare/TEST_01/src/limynt01.dist-info/: METADATA
VB6/: README.md
(+1868 files in other folders)
